# api/v1/koyeb/model_service_definition.go
@@ -1,439 +1,0 @@
-/*
- * Koyeb Rest API
- *
- * The Koyeb API allows you to interact with the Koyeb platform in a simple, programmatic way using conventional HTTP requests. 
- *
- * API version: 1.0.0
- */
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package koyeb
-
-import (
-	"encoding/json"
-)
-
-// ServiceDefinition struct for ServiceDefinition
-type ServiceDefinition struct {
-	Name *string `json:"name,omitempty"`
-	Routes *[]Route `json:"routes,omitempty"`
-	Ports *[]Port `json:"ports,omitempty"`
-	Env *[]Env `json:"env,omitempty"`
-	Regions *[]string `json:"regions,omitempty"`
-	Scaling *Scaling `json:"scaling,omitempty"`
-	InstanceType *string `json:"instance_type,omitempty"`
-	DeploymentGroup *string `json:"deployment_group,omitempty"`
-	Docker *DockerSource `json:"docker,omitempty"`
-	Git *GitSource `json:"git,omitempty"`
-}
-
-// NewServiceDefinition instantiates a new ServiceDefinition object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewServiceDefinition() *ServiceDefinition {
-	this := ServiceDefinition{}
-	return &this
-}
-
-// NewServiceDefinitionWithDefaults instantiates a new ServiceDefinition object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewServiceDefinitionWithDefaults() *ServiceDefinition {
-	this := ServiceDefinition{}
-	return &this
-}
-
-// GetName returns the Name field value if set, zero value otherwise.
-func (o *ServiceDefinition) GetName() string {
-	if o == nil || o.Name == nil {
-		var ret string
-		return ret
-	}
-	return *o.Name
-}
-
-// GetNameOk returns a tuple with the Name field value if set, nil otherwise
-// and a boolean to check if the value has been set.
-func (o *ServiceDefinition) GetNameOk() (*string, bool) {
-	if o == nil || o.Name == nil {
-		return nil, false
-	}
-	return o.Name, true
-}
-
-// HasName returns a boolean if a field has been set.
-func (o *ServiceDefinition) HasName() bool {
-	if o != nil && o.Name != nil {
-		return true
-	}
-
-	return false
-}
-
-// SetName gets a reference to the given string and assigns it to the Name field.
-func (o *ServiceDefinition) SetName(v string) {
-	o.Name = &v
-}
-
-// GetRoutes returns the Routes field value if set, zero value otherwise.
-func (o *ServiceDefinition) GetRoutes() []Route {
-	if o == nil || o.Routes == nil {
-		var ret []Route
-		return ret
-	}
-	return *o.Routes
-}
-
-// GetRoutesOk returns a tuple with the Routes field value if set, nil otherwise
-// and a boolean to check if the value has been set.
-func (o *ServiceDefinition) GetRoutesOk() (*[]Route, bool) {
-	if o == nil || o.Routes == nil {
-		return nil, false
-	}
-	return o.Routes, true
-}
-
-// HasRoutes returns a boolean if a field has been set.
-func (o *ServiceDefinition) HasRoutes() bool {
-	if o != nil && o.Routes != nil {
-		return true
-	}
-
-	return false
-}
-
-// SetRoutes gets a reference to the given []Route and assigns it to the Routes field.
-func (o *ServiceDefinition) SetRoutes(v []Route) {
-	o.Routes = &v
-}
-
-// GetPorts returns the Ports field value if set, zero value otherwise.
-func (o *ServiceDefinition) GetPorts() []Port {
-	if o == nil || o.Ports == nil {
-		var ret []Port
-		return ret
-	}
-	return *o.Ports
-}
-
-// GetPortsOk returns a tuple with the Ports field value if set, nil otherwise
-// and a boolean to check if the value has been set.
-func (o *ServiceDefinition) GetPortsOk() (*[]Port, bool) {
-	if o == nil || o.Ports == nil {
-		return nil, false
-	}
-	return o.Ports, true
-}
-
-// HasPorts returns a boolean if a field has been set.
-func (o *ServiceDefinition) HasPorts() bool {
-	if o != nil && o.Ports != nil {
-		return true
-	}
-
-	return false
-}
-
-// SetPorts gets a reference to the given []Port and assigns it to the Ports field.
-func (o *ServiceDefinition) SetPorts(v []Port) {
-	o.Ports = &v
-}
-
-// GetEnv returns the Env field value if set, zero value otherwise.
-func (o *ServiceDefinition) GetEnv() []Env {
-	if o == nil || o.Env == nil {
-		var ret []Env
-		return ret
-	}
-	return *o.Env
-}
-
-// GetEnvOk returns a tuple with the Env field value if set, nil otherwise
-// and a boolean to check if the value has been set.
-func (o *ServiceDefinition) GetEnvOk() (*[]Env, bool) {
-	if o == nil || o.Env == nil {
-		return nil, false
-	}
-	return o.Env, true
-}
-
-// HasEnv returns a boolean if a field has been set.
-func (o *ServiceDefinition) HasEnv() bool {
-	if o != nil && o.Env != nil {
-		return true
-	}
-
-	return false
-}
-
-// SetEnv gets a reference to the given []Env and assigns it to the Env field.
-func (o *ServiceDefinition) SetEnv(v []Env) {
-	o.Env = &v
-}
-
-// GetRegions returns the Regions field value if set, zero value otherwise.
-func (o *ServiceDefinition) GetRegions() []string {
-	if o == nil || o.Regions == nil {
-		var ret []string
-		return ret
-	}
-	return *o.Regions
-}
-
-// GetRegionsOk returns a tuple with the Regions field value if set, nil otherwise
-// and a boolean to check if the value has been set.
-func (o *ServiceDefinition) GetRegionsOk() (*[]string, bool) {
-	if o == nil || o.Regions == nil {
-		return nil, false
-	}
-	return o.Regions, true
-}
-
-// HasRegions returns a boolean if a field has been set.
-func (o *ServiceDefinition) HasRegions() bool {
-	if o != nil && o.Regions != nil {
-		return true
-	}
-
-	return false
-}
-
-// SetRegions gets a reference to the given []string and assigns it to the Regions field.
-func (o *ServiceDefinition) SetRegions(v []string) {
-	o.Regions = &v
-}
-
-// GetScaling returns the Scaling field value if set, zero value otherwise.
-func (o *ServiceDefinition) GetScaling() Scaling {
-	if o == nil || o.Scaling == nil {
-		var ret Scaling
-		return ret
-	}
-	return *o.Scaling
-}
-
-// GetScalingOk returns a tuple with the Scaling field value if set, nil otherwise
-// and a boolean to check if the value has been set.
-func (o *ServiceDefinition) GetScalingOk() (*Scaling, bool) {
-	if o == nil || o.Scaling == nil {
-		return nil, false
-	}
-	return o.Scaling, true
-}
-
-// HasScaling returns a boolean if a field has been set.
-func (o *ServiceDefinition) HasScaling() bool {
-	if o != nil && o.Scaling != nil {
-		return true
-	}
-
-	return false
-}
-
-// SetScaling gets a reference to the given Scaling and assigns it to the Scaling field.
-func (o *ServiceDefinition) SetScaling(v Scaling) {
-	o.Scaling = &v
-}
-
-// GetInstanceType returns the InstanceType field value if set, zero value otherwise.
-func (o *ServiceDefinition) GetInstanceType() string {
-	if o == nil || o.InstanceType == nil {
-		var ret string
-		return ret
-	}
-	return *o.InstanceType
-}
-
-// GetInstanceTypeOk returns a tuple with the InstanceType field value if set, nil otherwise
-// and a boolean to check if the value has been set.
-func (o *ServiceDefinition) GetInstanceTypeOk() (*string, bool) {
-	if o == nil || o.InstanceType == nil {
-		return nil, false
-	}
-	return o.InstanceType, true
-}
-
-// HasInstanceType returns a boolean if a field has been set.
-func (o *ServiceDefinition) HasInstanceType() bool {
-	if o != nil && o.InstanceType != nil {
-		return true
-	}
-
-	return false
-}
-
-// SetInstanceType gets a reference to the given string and assigns it to the InstanceType field.
-func (o *ServiceDefinition) SetInstanceType(v string) {
-	o.InstanceType = &v
-}
-
-// GetDeploymentGroup returns the DeploymentGroup field value if set, zero value otherwise.
-func (o *ServiceDefinition) GetDeploymentGroup() string {
-	if o == nil || o.DeploymentGroup == nil {
-		var ret string
-		return ret
-	}
-	return *o.DeploymentGroup
-}
-
-// GetDeploymentGroupOk returns a tuple with the DeploymentGroup field value if set, nil otherwise
-// and a boolean to check if the value has been set.
-func (o *ServiceDefinition) GetDeploymentGroupOk() (*string, bool) {
-	if o == nil || o.DeploymentGroup == nil {
-		return nil, false
-	}
-	return o.DeploymentGroup, true
-}
-
-// HasDeploymentGroup returns a boolean if a field has been set.
-func (o *ServiceDefinition) HasDeploymentGroup() bool {
-	if o != nil && o.DeploymentGroup != nil {
-		return true
-	}
-
-	return false
-}
-
-// SetDeploymentGroup gets a reference to the given string and assigns it to the DeploymentGroup field.
-func (o *ServiceDefinition) SetDeploymentGroup(v string) {
-	o.DeploymentGroup = &v
-}
-
-// GetDocker returns the Docker field value if set, zero value otherwise.
-func (o *ServiceDefinition) GetDocker() DockerSource {
-	if o == nil || o.Docker == nil {
-		var ret DockerSource
-		return ret
-	}
-	return *o.Docker
-}
-
-// GetDockerOk returns a tuple with the Docker field value if set, nil otherwise
-// and a boolean to check if the value has been set.
-func (o *ServiceDefinition) GetDockerOk() (*DockerSource, bool) {
-	if o == nil || o.Docker == nil {
-		return nil, false
-	}
-	return o.Docker, true
-}
-
-// HasDocker returns a boolean if a field has been set.
-func (o *ServiceDefinition) HasDocker() bool {
-	if o != nil && o.Docker != nil {
-		return true
-	}
-
-	return false
-}
-
-// SetDocker gets a reference to the given DockerSource and assigns it to the Docker field.
-func (o *ServiceDefinition) SetDocker(v DockerSource) {
-	o.Docker = &v
-}
-
-// GetGit returns the Git field value if set, zero value otherwise.
-func (o *ServiceDefinition) GetGit() GitSource {
-	if o == nil || o.Git == nil {
-		var ret GitSource
-		return ret
-	}
-	return *o.Git
-}
-
-// GetGitOk returns a tuple with the Git field value if set, nil otherwise
-// and a boolean to check if the value has been set.
-func (o *ServiceDefinition) GetGitOk() (*GitSource, bool) {
-	if o == nil || o.Git == nil {
-		return nil, false
-	}
-	return o.Git, true
-}
-
-// HasGit returns a boolean if a field has been set.
-func (o *ServiceDefinition) HasGit() bool {
-	if o != nil && o.Git != nil {
-		return true
-	}
-
-	return false
-}
-
-// SetGit gets a reference to the given GitSource and assigns it to the Git field.
-func (o *ServiceDefinition) SetGit(v GitSource) {
-	o.Git = &v
-}
-
-func (o ServiceDefinition) MarshalJSON() ([]byte, error) {
-	toSerialize := map[string]interface{}{}
-	if o.Name != nil {
-		toSerialize["name"] = o.Name
-	}
-	if o.Routes != nil {
-		toSerialize["routes"] = o.Routes
-	}
-	if o.Ports != nil {
-		toSerialize["ports"] = o.Ports
-	}
-	if o.Env != nil {
-		toSerialize["env"] = o.Env
-	}
-	if o.Regions != nil {
-		toSerialize["regions"] = o.Regions
-	}
-	if o.Scaling != nil {
-		toSerialize["scaling"] = o.Scaling
-	}
-	if o.InstanceType != nil {
-		toSerialize["instance_type"] = o.InstanceType
-	}
-	if o.DeploymentGroup != nil {
-		toSerialize["deployment_group"] = o.DeploymentGroup
-	}
-	if o.Docker != nil {
-		toSerialize["docker"] = o.Docker
-	}
-	if o.Git != nil {
-		toSerialize["git"] = o.Git
-	}
-	return json.Marshal(toSerialize)
-}
-
-type NullableServiceDefinition struct {
-	value *ServiceDefinition
-	isSet bool
-}
-
-func (v NullableServiceDefinition) Get() *ServiceDefinition {
-	return v.value
-}
-
-func (v *NullableServiceDefinition) Set(val *ServiceDefinition) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableServiceDefinition) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableServiceDefinition) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableServiceDefinition(val *ServiceDefinition) *NullableServiceDefinition {
-	return &NullableServiceDefinition{value: val, isSet: true}
-}
-
-func (v NullableServiceDefinition) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableServiceDefinition) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
